style(TRN-90): Fixed layout issues in item editor component

--- a/frontend/src/app/header/header.component.scss
+++ b/frontend/src/app/header/header.component.scss
@@ -34,7 +34,7 @@ nav {
     transform: scaleX(0);
     width: 100%;
     height: 3px;
-    bottom: -2px;
+    bottom: -3px;
     left: 0;
     background-image: linear-gradient(45deg, rgb(255, 255, 255, 0), #0084ca);
     transform-origin: bottom right;
