--- a/frontend/src/app/item-editor/item-editor.component.scss
+++ b/frontend/src/app/item-editor/item-editor.component.scss
@@ -21,19 +21,25 @@ th {
     display: flex;
     flex-direction: row;
     width: 100%;
-    // height: 60%;
+    height: 75%;
+    padding-bottom: 2rem !important;
 
     .table-sub-container {
       flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       // height: 60%;
     }
   }
 
   .item-display {
-    // height: 40%;
+    height: 25%;
+    background-color: #ffffff;
+    border-radius: 10px;
+    padding: 1.25rem;
 
     p {
-      color: white;
       margin: 0;
     }
   }
@@ -41,19 +47,14 @@ th {
 
 .project-card-container {
   width: 25%;
-  background-color: rgba(45, 45, 45, 0.9);
+  background-color: #ffffff;
   border-radius: 10px;
   padding: 1.25rem;
   margin-left: 1rem;
 
   p {
-    color: white;
     margin: 0;
   }
-}
-
-.add-button {
-  margin-bottom: 1rem;
 }
 
 .viewport {
@@ -63,47 +64,47 @@ th {
 
 /* Table styles */
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-  border-radius: 10px;
-  overflow: hidden;
-  background: rgba(255, 255, 255, 0.1);
-}
+// table {
+//   width: 100%;
+//   border-collapse: collapse;
+//   border-radius: 10px;
+//   overflow: hidden;
+//   background: rgba(255, 255, 255, 0.1);
+// }
 
-thead tr th {
-  background: rgba(45, 45, 45, 0.9);
-  /* Dark gray with some transparency */
-  text-transform: uppercase;
-  border-bottom: 2px solid var(--tui-base-03);
-  /* Adjust this color if needed */
-  color: white;
-  /* Ensures text is readable on dark background */
-  text-align: center;
-  border: none;
-}
+// thead tr th {
+//   background: rgba(45, 45, 45, 0.9);
+//   /* Dark gray with some transparency */
+//   text-transform: uppercase;
+//   border-bottom: 2px solid var(--tui-base-03);
+//   /* Adjust this color if needed */
+//   color: white;
+//   /* Ensures text is readable on dark background */
+//   text-align: center;
+//   border: none;
+// }
 
-tbody tr {
-  background-color: rgba(35, 37, 40, 0.9) !important;
-  /* Darker row background for odd rows */
-  color: white;
-  /* Light text color for better readability */
-}
+// tbody tr {
+//   background-color: rgba(35, 37, 40, 0.9) !important;
+//   /* Darker row background for odd rows */
+//   color: white;
+//   /* Light text color for better readability */
+// }
 
-tbody tr:nth-child(even) {
-  background-color: rgba(55, 57, 60, 0.9) !important;
-  /* Slightly lighter shade for even rows */
-}
+// tbody tr:nth-child(even) {
+//   background-color: rgba(55, 57, 60, 0.9) !important;
+//   /* Slightly lighter shade for even rows */
+// }
 
-tbody td {
-  text-align: center;
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
-  /* Subtle top border for cells */
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  /* Subtle bottom border for cells */
-  background-color: rgba(35, 37, 40, 0.8);
-  border: none;
-}
+// tbody td {
+//   text-align: center;
+//   border-top: 1px solid rgba(255, 255, 255, 0.1);
+//   /* Subtle top border for cells */
+//   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+//   /* Subtle bottom border for cells */
+//   background-color: rgba(35, 37, 40, 0.8);
+//   border: none;
+// }
 
 .options {
   opacity: 0;
