--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -40,7 +40,6 @@ app-extension-editor {
 .table-container {
   display: block;
   max-height: 95vh;
-  max-width: 70%;
   overflow: auto;
   border-radius: 10px
 }
